--- a/ZPSVN/ZPSVN/app.config
+++ b/ZPSVN/ZPSVN/app.config
@@ -2,12 +2,11 @@
 <configuration>
 	<configSections>
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-		</sectionGroup>
+		
 	</configSections>
 	<connectionStrings>
-		<!--Add Connection string here-->
-	</connectionStrings>
+     <add name="SqlConnection" connectionString="server=localhost;database=svnStatusInfo;user id=root;password=" />
+ </connectionStrings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
 	</startup>
